--- a/.github/workflows/ci-dev-br.yaml
+++ b/.github/workflows/ci-dev-br.yaml
@@ -8,3 +8,4 @@ jobs:
     uses: vsaitejasgitorg/github-actions-reusable/.github/workflows/ci-dev-br.yaml@main
     with:
       component_name: payment
+      app_type: python
