Increasing Threads and Processes in Payment

--- a/payment.ini
+++ b/payment.ini
@@ -3,7 +3,8 @@ wsgi-file = payment.py
 callable = app
 
 master = true
-processes = 1
+processes = 4
+ threads = 2
 lazy-apps = true
 enable-threads = true
 
