--- a/payment.ini
+++ b/payment.ini
@@ -3,8 +3,8 @@ wsgi-file = payment.py
 callable = app
 
 master = true
-processes = 4
- threads = 2
+processes = 1
+#threads = 2
 lazy-apps = true
 enable-threads = true
 
